--- a/template.yaml
+++ b/template.yaml
@@ -592,48 +592,48 @@ Resources:
   #         ActionOnTimeout: CONTINUE_DEPLOYMENT
   
   
-  # EventBridgeRole:
-  #   Type: AWS::IAM::Role
-  #   Properties:
-  #     AssumeRolePolicyDocument:
-  #       Version: '2012-10-17'
-  #       Statement:
-  #         - Effect: Allow
-  #           Principal:
-  #             Service: events.amazonaws.com
-  #           Action: sts:AssumeRole
-  #     Policies:
-  #       - PolicyName: AllowStartPipelineExecution
-  #         PolicyDocument:
-  #           Version: '2012-10-17'
-  #           Statement:
-  #             - Effect: Allow
-  #               Action: codepipeline:StartPipelineExecution
-  #               Resource: !Sub arn:aws:codepipeline:${AWS::Region}:${AWS::AccountId}:${CodePipeline}
+  EventBridgeRole:
+    Type: AWS::IAM::Role
+    Properties:
+      AssumeRolePolicyDocument:
+        Version: '2012-10-17'
+        Statement:
+          - Effect: Allow
+            Principal:
+              Service: events.amazonaws.com
+            Action: sts:AssumeRole
+      Policies:
+        - PolicyName: AllowStartPipelineExecution
+          PolicyDocument:
+            Version: '2012-10-17'
+            Statement:
+              - Effect: Allow
+                Action: codepipeline:StartPipelineExecution
+                Resource: !Sub arn:aws:codepipeline:${AWS::Region}:${AWS::AccountId}:${CodePipeline}
 
-  # EventBridgeRule:
-  #   Type: AWS::Events::Rule
-  #   Properties:
-  #     Name: !Sub 'EcrImagePush-Rule-cicdlab'
-  #     Description: Triggers CodePipeline on new ECR image push.
-  #     EventPattern:
-  #       source:
-  #         - aws.ecr
-  #       detail-type:
-  #         - 'ECR Image Action'
-  #       detail:
-  #         repository-name:
-  #           - !Ref EcrRepository
-  #         action-type:
-  #           - 'PUSH'
-  #         result:
-  #           - 'SUCCESS'
-  #         image-tag:
-  #           - 'latest'
-  #     Targets:
-  #       - Arn: !Sub arn:aws:codepipeline:${AWS::Region}:${AWS::AccountId}:${CodePipeline}
-  #         RoleArn: !GetAtt EventBridgeRole.Arn
-  #         Id: CodePipelineTarget
+  EventBridgeRule:
+    Type: AWS::Events::Rule
+    Properties:
+      Name: !Sub 'EcrImagePush-Rule-cicdlab'
+      Description: Triggers CodePipeline on new ECR image push.
+      EventPattern:
+        source:
+          - aws.ecr
+        detail-type:
+          - 'ECR Image Action'
+        detail:
+          repository-name:
+            - !Ref EcrRepository
+          action-type:
+            - 'PUSH'
+          result:
+            - 'SUCCESS'
+          image-tag:
+            - 'latest'
+      Targets:
+        - Arn: !Sub arn:aws:codepipeline:${AWS::Region}:${AWS::AccountId}:${CodePipeline}
+          RoleArn: !GetAtt EventBridgeRole.Arn
+          Id: CodePipelineTarget
 
 
   # CodePipeline:
