fix: change stage source to ECRSource

--- a/template.yaml
+++ b/template.yaml
@@ -663,7 +663,7 @@ Resources:
                 - Name: SourceOutput
               RunOrder: 1
 
-        - Name: Source
+        - Name: ECRSource
           Actions:
             - Name: EcrImage
               ActionTypeId:
