--- a/template.yaml
+++ b/template.yaml
@@ -40,6 +40,7 @@ Parameters:
     Type: String
     NoEcho: true
     Description: GitHub Personal Access Token
+    Default: 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
 
 Resources:
   # ------------------------------------------------------------#
@@ -640,67 +641,67 @@ Resources:
   #         Id: CodePipelineTarget
 
 
-  # CodePipeline:
-  #   Type: AWS::CodePipeline::Pipeline
-  #   Properties:
-  #     Name: !Sub 'cicdlab-Pipeline'
-  #     RoleArn: !GetAtt CodePipelineServiceRole.Arn
-  #     ArtifactStore:
-  #       Type: S3
-  #       Location: !Ref CodePipelineBucket
-  #     Stages:
-  #       # ---------------- Source Stage ----------------
-  #       - Name: Source
-  #         Actions:
-  #           - Name: GitHubSource
-  #             ActionTypeId:
-  #               Category: Source
-  #               Owner: ThirdParty
-  #               Provider: GitHub
-  #               Version: '1'
-  #             Configuration:
-  #               Owner: Moadams
-  #               Repo: CICDApplication
-  #               Branch: main
-  #               OAuthToken: !Ref GitHubToken
-  #             OutputArtifacts:
-  #               - Name: SourceOutput
-  #             RunOrder: 1
+  CodePipeline:
+    Type: AWS::CodePipeline::Pipeline
+    Properties:
+      Name: !Sub 'cicdlab-Pipeline'
+      RoleArn: !GetAtt CodePipelineServiceRole.Arn
+      ArtifactStore:
+        Type: S3
+        Location: !Ref CodePipelineBucket
+      Stages:
+        # ---------------- Source Stage ----------------
+        - Name: Source
+          Actions:
+            - Name: GitHubSource
+              ActionTypeId:
+                Category: Source
+                Owner: ThirdParty
+                Provider: GitHub
+                Version: '1'
+              Configuration:
+                Owner: Moadams
+                Repo: CICDApplication
+                Branch: main
+                OAuthToken: !Ref GitHubToken
+              OutputArtifacts:
+                - Name: SourceOutput
+              RunOrder: 1
 
             
-  #           - Name: EcrSource
-  #             ActionTypeId:
-  #               Category: Source
-  #               Owner: AWS
-  #               Provider: ECR
-  #               Version: '1'
-  #             Configuration:
-  #               RepositoryName: !Ref EcrRepository
-  #               ImageTag: latest   
-  #             OutputArtifacts:
-  #               - Name: EcrImage
-  #             RunOrder: 2
+            - Name: EcrSource
+              ActionTypeId:
+                Category: Source
+                Owner: AWS
+                Provider: ECR
+                Version: '1'
+              Configuration:
+                RepositoryName: !Ref EcrRepository
+                ImageTag: latest   
+              OutputArtifacts:
+                - Name: EcrImage
+              RunOrder: 2
           
           
-  #       - Name: Deploy
-  #         Actions:
-  #           - Name: DeployToECS
-  #             ActionTypeId:
-  #               Category: Deploy
-  #               Owner: AWS
-  #               Provider: CodeDeploy
-  #               Version: '1'
-  #             InputArtifacts:
-  #               - Name: SourceOutput
-  #               - Name: EcrImage
-  #             Configuration:
-  #               ApplicationName: !Ref CodeDeployApplication
-  #               DeploymentGroupName: !Ref CodeDeployDeploymentGroup
-  #               AppSpecTemplateArtifact: SourceOutput
-  #               AppSpecTemplatePath: appspec.yml
-  #               TaskDefinitionTemplateArtifact: SourceOutput
-  #               TaskDefinitionTemplatePath: taskdef.json
-  #             RunOrder: 1
+        - Name: Deploy
+          Actions:
+            - Name: DeployToECS
+              ActionTypeId:
+                Category: Deploy
+                Owner: AWS
+                Provider: CodeDeploy
+                Version: '1'
+              InputArtifacts:
+                - Name: SourceOutput
+                - Name: EcrImage
+              Configuration:
+                ApplicationName: !Ref CodeDeployApplication
+                DeploymentGroupName: !Ref CodeDeployDeploymentGroup
+                AppSpecTemplateArtifact: SourceOutput
+                AppSpecTemplatePath: appspec.yml
+                TaskDefinitionTemplateArtifact: SourceOutput
+                TaskDefinitionTemplatePath: taskdef.json
+              RunOrder: 1
   # # Scalable target for the ECS service
   EcsServiceScalableTarget:
     Type: AWS::ApplicationAutoScaling::ScalableTarget
